Stackhawk failure threshold

--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -7,6 +7,8 @@ app:
   # -- The url of your application to scan --
   host: http://localhost:3000 # (required)
 
+hawk:
+  failureThreshold: high
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
   # Configuration Docs: https://docs.stackhawk.com/hawkscan/configuration/
